2017-09-07  Joakim Möller  <joakim.moller@molflow.com>

	* Mscripts_webapi/webread_retry: Update to actually retry the GET request
	as many times the input parameter says. Better error reporting.

	* Mscripts_webapi/webwrite_retry: Update to actually retry the POST request
	as many times the input parameter says. Better error reporting.

	* Build_scripts/runscript.m: Quit and report if input-URL gives empty
	result.

2017-09-04  Joakim Möller  <joakim.moller@molflow.com>

	* Build_scripts/batch_build_single.sh: Updated script to push to the
	backend registry instead of the cached frontend registry.

	* Build_scripts/docker/complete/build_complete.sh: Updated script to push
	to the backend registry instead of the cached frontend registry.

	* ChangeLog: Adjusting Andreas last ChangLog dates after consulting him.

2017-09-01  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: implemented thermal expansion of l0_LO
	in addition to l0_SB

2017-08-31  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/: created directory (this name is probably temporary)
	* Mscripts_misc/sband_from_l1b.m: added matlab function for calculating
	sideband leakage for an L1b record, based on a model for the thermal
	expansion of the sideband filter path length (should maybe be in a
	different or at least differently named directory)

2017-08-29  Bengt Rydberg  <bengt.rydberg@molflow.com>

	* Build_scripts/create_qsmr_project.sh: added bash script for creating
	a qsmr processing project including a qsmr worker image
	* Build_scripts/batch_build_single.sh: added bash script for creating
	a qsmr worker image
	* Build_scripts/docker/build_base.sh: added argument handling
	* Build_scripts/docker/build_complete.sh: added argument handling
	* Build_scripts/docker/complete/Dockerfile: removed file

2017-06-26  Joakim Möller  <joakim.moller@molflow.com>

	* Mscripts_webapi/webwrite_retry.m:  implemented a retry proxy function