@@ -1,3 +1,11 @@
+2017-09-22  Andreas Skyman  <andreas.skyman@molflow.com>
+
+	* Mscripts_misc/sband_from_l1b.m: Added optional argument freq_grid to
+	function, which makes it use the supplied freq_grid instead of the ones in
+	the L1b struct, as well as use median Tcal, LOFreq and SBPath.  Updated
+	comments and names in function to reflect that the function returns
+	leakage, not response.
+
 2017-09-07  Joakim Möller  <joakim.moller@molflow.com>
 
 	* Mscripts_webapi/webread_retry: Update to actually retry the GET request
